# actions-fargate

./: Dockerfile  README.md  action.yml  pyproject.toml
fargate/: cli.py  service.py  task.py  vpc.py
